objects/UNITY_Customer_Skill_Mapping__c.object
<CustomObject>
    <description>UNITY - Populated with &apos;skill&apos; labels defined by customer and translate to standard skills</description>
    <fields>
        <fullName>UNITY_Customer_Skill_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UNITY Customer Skill External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UNITY_Skill_Broad__c</fullName>
        <label>Skill Broad</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Skill_Group__c</fullName>
        <label>Skill Group</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Skill_Type__c</fullName>
        <label>Skill Type</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <label>Customer Skill Mapping</label>
    <nameField>
        <label>Customer Skill Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Skill Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>